# winregistry

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Justfile  LICENSE  README.md  index.html  pyproject.toml  readme.md  readme.rst  setup.py  winregistry.py  winregistry.robot.html  winregistry_tests.robot
.github/: FUNDING.yml
.github/workflows/: doc.yml  lint.yml  pypi.yml  robot.yml  tests.yml
tests/: test_utils.py
winregistry/: __init__.py  _errors.py  _types.py  _utils.py  _winregistry.py  consts.py  enums.py  key.py  models.py  utils.py  value.py  winregistry.py
winregistry/robot/: __init__.py  keywords.py
